# vigir_ros_control

./: .gitignore  README
vigir_humanoid_control_msgs/: CMakeLists.txt  package.xml
vigir_humanoid_control_msgs/action/: ChangeControlMode.action
vigir_humanoid_control_msgs/include/vigir_humanoid_control_msgs/: vigir_humanoid_control_msgs.h
vigir_humanoid_control_msgs/msg/: ControlModeStatus.msg  VigirRobotStability.msg
vigir_humanoid_controller/: CMakeLists.txt  package.xml
vigir_humanoid_controller/cfg/: VigirJointCalibrationGains.cfg
vigir_humanoid_controller/include/vigir_humanoid_controller/: VigirHumanoidController.h  VigirHumanoidHWInterface.h  VigirHumanoidInterface.h  VigirHumanoidStatusCodes.h  VigirJointCalibrationGainsManager.h  VigirRealTimeBuffer.h  VigirRealTimePublisher.h  VigirRobotCalibration.h
vigir_humanoid_controller/launch/: controlled_joints.yaml  gdb_test_humanoid.launch
vigir_humanoid_controller/src/: VigirHumanoidController.cpp  VigirHumanoidHWInterface.cpp  VigirHumanoidInterface.cpp  test_vigir_humanoid_controller.cpp
vigir_humanoid_controllers/: CMakeLists.txt  package.xml  vigir_humanoid_controllers_plugins.xml
vigir_humanoid_controllers/include/vigir_humanoid_controllers/: vigir_controller_controller_base.h  vigir_friction_compensation_controller.h  vigir_gravity_compensation_controller.h  vigir_inverse_dynamics_controller.h  vigir_pelvis_trajectory_controller.h  vigir_pelvis_trajectory_controller_impl.h
vigir_humanoid_controllers/src/: vigir_friction_compensation_controller.cpp  vigir_gravity_compensation_controller.cpp  vigir_inverse_dynamics_controller.cpp  vigir_joint_trajectory_controller.cpp  vigir_pelvis_trajectory_controller.cpp
vigir_humanoid_interfaces/: CMakeLists.txt  package.xml
vigir_humanoid_interfaces/include/vigir_humanoid_interfaces/: pos_vel_acc_err_humanoid_joint_iface.h  pos_vel_acc_err_humanoid_joint_iface_adapter.h  pos_vel_acc_joint_iface.h  pos_vel_acc_joint_iface_adapter.h  vigir_humanoid_controller_interface.h  vigir_pelvis_iface.h  vigir_pelvis_iface_adapter.h
vigir_humanoid_interfaces/src/: test_interfaces.cpp
vigir_joint_interfaces/: CMakeLists.txt  package.xml
vigir_joint_interfaces/include/vigir_joint_interfaces/: pos_vel_acc_err_humanoid_joint_iface.h  pos_vel_acc_err_humanoid_joint_iface_adapter.h  pos_vel_acc_joint_iface.h  pos_vel_acc_joint_iface_adapter.h  vigir_pelvis_iface.h  vigir_pelvis_iface_adapter.h
vigir_joint_interfaces/src/: test_interfaces.cpp
vigir_robot_model/: CMakeLists.txt  package.xml
vigir_robot_model/include/vigir_robot_model/: VigirRobotBasic2StateKF.h  VigirRobotBasicKF.h  VigirRobotCalibration.h  VigirRobotCalibrationBase.h  VigirRobotDataTypes.h  VigirRobotFilter.h  VigirRobotFilterBase.h  VigirRobotKalmanFilterBase.h  VigirRobotModel.h  VigirRobotPoseFilter.h  VigirRobotPoseFilterBase.h  VigirRobotRBDLModel.h  VigirRobotSimpleFilter.h  VigirRobotStability.h  VigirRobotState.h  VigirTimeOffset.h
vigir_robot_model/launch/: gdb_test_model.launch
vigir_robot_model/src/: VigirRobotBasic2StateKF.cpp  VigirRobotBasicKF.cpp  VigirRobotKalmanFilterBase.cpp  VigirRobotModel.cpp  VigirRobotPoseFilter.cpp  VigirRobotRBDLModel.cpp  VigirRobotStability.cpp  VigirRobotState.cpp  test_vigir_robot_basic_kf.cpp  test_vigir_robot_model.cpp  test_vigir_robot_pose_filter.cpp
vigir_ros_controllers/: CMakeLists.txt  package.xml  vigir_ros_controllers_plugins.xml
vigir_ros_controllers/include/vigir_ros_controllers/: vigir_pelvis_trajectory_controller.h  vigir_pelvis_trajectory_controller_impl.h
vigir_ros_controllers/src/: vigir_joint_trajectory_controller.cpp  vigir_pelvis_trajectory_controller.cpp
vigir_trajectory_command_multiplexer/: CMakeLists.txt  package.xml  setup.py
vigir_trajectory_command_multiplexer/launch/: l_arm_traj_command_multiplexer.launch
vigir_trajectory_command_multiplexer/scripts/: trajectory_command_multiplexer
vigir_trajectory_command_multiplexer/src/vigir_trajectory_command_multiplexer/: vigir_trajectory_command_multiplexer.py
vigir_trajectory_smoother/: CMakeLists.txt  package.xml  setup.py
vigir_trajectory_smoother/launch/: l_arm_moveit_trajectory_plotter.launch  l_arm_trajectory_plotter.launch  r_arm_trajectory_plotter.launch  r_arm_trajectory_smoothing.launch  trajectory_smoothing.launch
vigir_trajectory_smoother/scripts/: trajectory_plotter  trajectory_smoother
vigir_trajectory_smoother/src/vigir_trajectory_smoother/: vigir_trajectory_c3_smoother.py  vigir_trajectory_cubic_smoother.py  vigir_trajectory_piecewise_smoother.py  vigir_trajectory_plotting.py  vigir_trajectory_quartic_smoother.py  vigir_trajectory_smoother_base.py  vigir_trajectory_utility.py
