<?xml version="1.0"?>
<package>
  <name>vigir_humanoid_controller</name>
  <version>0.0.0</version>
  <description>The vigir_humanoid_controller package builds upon generic controllers provided
  by   the ros_control interface and humanoid modeling via the vigir_robot_model packages
  to provide a generic interface for providing humanoid robot control.

  This interface defines the generic ROS interfaces for actions and controllers, and
  defines the protype functions used by the specific robot interfaces.

  The package defines asynchonous spinners to handle ROS actions and ROS controllers,
  but does NOT impose any particular threading model.

  It is up to the user to understand and implement appropriate data protections within the
  robot specific implementations.

</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="conner@torcrobotics.com">David Conner</maintainer>
  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author     email="conner@torcrobotics.com">David Conner</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/vigir_robot_model</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>vigir_robot_model</build_depend>
  <build_depend>vigir_joint_interfaces</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>flor_utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>vigir_robot_model</run_depend>
  <run_depend>vigir_joint_interfaces</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>flor_utilities</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
