<?xml version="1.0"?>
<package>
  <name>vigir_robot_model</name>
  <version>0.0.0</version>
  <description>The vigir_robot_model package provides a consistent interfaces for
  storing loading generic robot models and storing robot state data, with interfaces to calibration
  conversions and standard filtering.  The package provides an interface to dynamics
  libraries used to generate basic kinematics and dynamics calculations.
  The code is intended to be extensible; the default implementation is based on RBDL,
  the Rigid Body Dynamics Library. The library contains highly
    efficient code for both forward and inverse dynamics. It includes:
    <ul>
      <li>Recursive Newton Euler Algorithm,</li>
      <li>Composite Rigid Body Algorithm,</li>
      <li>Articulated Body Algorithm.</li>
    </ul>

    The RBDL code is written by Martin Felis and heavily inspired by the
    pseudo code of the book &quot;Rigid Body Dynamics Algorithms&quot; of Roy
    Featherstone.

</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="conner@torcrobotics.com">David Conner</maintainer>
  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author     email="conner@torcrobotics.com">David Conner</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/vigir_robot_model</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>rbdl</build_depend>
  <build_depend>flor_utilities</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>rbdl</run_depend>
  <run_depend>flor_utilities</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
